2004-07-19 Adrian Dawe <adrian.dawe@multigig.com>

	* src/{Makefile.am,controls.tcl,engUnits.tcl,gnuplot.tcl,
	measure.tcl,nodeDialog.tcl,pkgIndex.tcl.in,readline.tcl,
	spicewish,spicewish.tcl,tclspice_source.tcl,viewer.tcl}:
	New and much improved tclspice CLI

2004-07-12 Stefan Jones <stefan.jones@multigig.com>

	* src/tclspice.c:
	New commands: plot_typename plot_defaultscale
	Mod: spice_data can be passed the plot number
	
2004-07-07 Stefan Jones <stefan.jones@multigig.com>

	* src/tclspice.c:
	Added new Tcl command plot_getvector,
	writes to a BLT vector a plot vector

2004-06-22 Adrian Dawe <adrian.dawe@multigig.com>

	* src/spicewish:
	Sorry noticed a bug
	could you add:
	set ::spicewish_mode "standalone"
	to line 107 (at the end of load proc)

2004-06-22 Stefan Jones <stefan.jones@multigig.com>

	* src/frontend/com_dl.c:
	Moved variable declaration to beginning of function

	* configure.in:
	Change to version 17

	* src/include/ngspice.h:
	include <errno.h> for Tcl version of perror

	* src/main.c:
	Add dummy INPretrieve() symbol so ngnutmeg and co link with 
	xspice enabled.

	* src/measure_spice.pl src/spicepp.pl.in Makefile.am:
	Add .measure statement support

2004-06-22 Adrian Dawe <adrian.dawe@multigig.com>

	* src/pkgIndex.tcl.in  src/spicepp.pl  src/spicepp.tcl  src/spicewish 
	src/Makefile.am:
	Added spicepp integration and spicewish command line options.

	* src/spicewish:
	Added -cm switch to load a codemodel

2004-06-10 Stefan Jones <stefan.jones@multigig.com>

	* include/ngspice.h:
	Print perror to the Tk console
	
	* src/tclspice.c:
	test for FILE in tcl_printf being stdout/stderr
	Could be more than one fd for stdout/stderr
	
	* src/tclspice.c:
	Do not join worker thread when using TCL_Threads as it causes
	lockups on W32

2004-06-04 Stefan Jones <stefan.jones@multigig.com>

	* src/tclspice.c:
	Cleaned up thread code so can use Tcl_Threads instead on W32
	
	* src/tclspice.c:
	Do not register more than one identical trigger